# sigui_figures

./: README.md  pyproject.toml
fig2/: fig2.py  quality_layout.json  quality_settings.json
fig3/: fig3.py  spike_layout.json  spike_settings.json
fig4/: fig4.py  merge_layout.json  merge_settings.json
fig5/: fig5.py
