[project]
name = "sigui_figures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "panel>=1.8.3",
    "param>=2.3.1",
    "pyqt5>=5.15.11",
    "pyqtgraph>=0.14.0",
    "sigui-ofratemap",
    "spikeinterface-gui",
]

[tool.uv.sources]
spikeinterface-gui = { path = "../spikeinterface-gui" }
sigui-ofratemap = { git = "https://github.com/chrishalcrow/sigui_ofratemap" }
